--- a/StowAway/StowAway-Info.plist
+++ b/StowAway/StowAway-Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.stowaway.stowawayApp</string>
+	<string>com.getstowaway.staging</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
