--- a/StowAway/StowAway-Info.plist
+++ b/StowAway/StowAway-Info.plist
@@ -37,6 +37,10 @@
 	<string>StowAway</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>location</string>
+	</array>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
