--- a/StowAway/Configurations.plist
+++ b/StowAway/Configurations.plist
@@ -3,29 +3,32 @@
 <plist version="1.0">
 <dict>
 	<key>Debug</key>
-	<dict/>
-	<key>kStowawayServerApiUrl_users</key>
-	<string>http://staging.getstowaway.com/api/v1/users/</string>
-	<key>kStowawayServerApiUrl_pusher</key>
-	<string>https://staging.getstowaway.com/pusher/</string>
-	<key>kCountdownTimerMaxSeconds </key>
-	<integer>30</integer>
-	<key>kPusherApiKey</key>
-	<string>403b5fc6f392db2fe167</string>
-	<key>kBundlePlistPath</key>
-	<string>https://getstowaway.com/app/latest/Stowaway.plist</string>
+	<dict>
+		<key>kStowawayServerApiUrl_users</key>
+		<string>https://staging.getstowaway.com/api/v1/users/</string>
+		<key>kStowawayServerApiUrl_pusher</key>
+		<string>https://staging.getstowaway.com/pusher/</string>
+		<key>kCountdownTimerMaxSeconds</key>
+		<string>30</string>
+		<key>kPusherApiKey</key>
+		<string>403b5fc6f392db2fe167</string>
+		<key>kBundlePlistPath</key>
+		<string>https://getstowaway.com/app/latest/Stowaway.plist</string>
+	</dict>
 	<key>Release</key>
 	<dict>
 		<key>kStowawayServerApiUrl_users</key>
-		<string>http://api.getstowaway.com/api/v1/users/</string>
+		<string>https://api.getstowaway.com/api/v1/users/</string>
 		<key>kStowawayServerApiUrl_pusher</key>
 		<string>https://api.getstowaway.com/pusher/</string>
-		<key>kCountdownTimerMaxSeconds </key>
+		<key>kCountdownTimerMaxSeconds</key>
 		<integer>300</integer>
 		<key>kPusherApiKey</key>
 		<string>26f93bf27a0add755521</string>
 		<key>kBundlePlistPath</key>
 		<string>https://getstowaway.com/app/latest/Stowaway.plist</string>
+		<key>kCrashlyticsAPIKey</key>
+		<string>780e5e925f514ea3d7583d573d7059e2ef4eadc1</string>
 	</dict>
 </dict>
 </plist>
