change https to http, bump version to 1.8

--- a/StowAway/Configurations.plist
+++ b/StowAway/Configurations.plist
@@ -7,7 +7,7 @@
 		<key>kStowawayServerApiUrl_users</key>
 		<string>http://staging.getstowaway.com/api/v1/users/</string>
 		<key>kStowawayServerApiUrl_pusher</key>
-		<string>http://staging.getstowaway.com/pusher/</string>
+		<string>https://staging.getstowaway.com/pusher/</string>
 		<key>kCountdownTimerMaxSeconds</key>
 		<string>30</string>
 		<key>kPusherApiKey</key>
@@ -18,7 +18,7 @@
 	<key>Release</key>
 	<dict>
 		<key>kStowawayServerApiUrl_users</key>
-		<string>https://api.getstowaway.com/api/v1/users/</string>
+		<string>http://api.getstowaway.com/api/v1/users/</string>
 		<key>kStowawayServerApiUrl_pusher</key>
 		<string>https://api.getstowaway.com/pusher/</string>
 		<key>kCountdownTimerMaxSeconds</key>
